email umesto user objekta

--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -31,7 +31,7 @@
             <input type="text" matInput placeholder="City" [(ngModel)]="city">
           </mat-form-field>
         </div>
-        
+
         <div class="menu-item">
           <mat-form-field>
             <input type="text" matInput placeholder="Id company" [(ngModel)]="idCompany">
@@ -115,6 +115,6 @@
       </mat-progress-spinner>
     </div>
 
-    <mat-toolbar color="primary" *ngIf="noData">No records found message</mat-toolbar>
+    <mat-toolbar color="primary" *ngIf="noData">No objects.</mat-toolbar>
 
   </div>
