--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -15,10 +15,10 @@
                     <li>Retailer: {{ object.retailer.retailerName }}</li>
                     <li>Assortment module: {{ object.objectInfo.assortmentModule }}</li>
                     <li>Number of registers: {{ object.objectInfo.registersNumber }}</li>
-                    <li>Director: {{ object.director.firstName }} {{ object.director.lastName }}</li>
-                    <li>Commercialist: {{ object.commercialist.firstName }} {{ object.commercialist.lastName }}</li>
-                    <li>Supervisor: {{ object.supervisor.firstName }} {{ object.supervisor.lastName }}</li>
-                    <li>Director: {{ object.merchandiser.firstName }} {{ object.merchandiser.lastName }}</li>
+                    <li>Director: {{ object.director}}</li>
+                    <li>Commercialist: {{ object.commercialist}}</li>
+                    <li>Supervisor: {{ object.supervisor}}</li>
+                    <li>Director: {{ object.merchandiser}}</li>
                     <li>Requisition days: {{ object.requisitionDays }}</li>
                     <li>Merchandiser revision days: {{ object.merchandiserRevisionDays }}</li>
                 </ul>
