--- a/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
+++ b/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
@@ -46,50 +46,30 @@
 
   <div class="form">
     <mat-form-field>
-      <mat-select [(ngModel)]="data.kam" placeholder="KAM" name="KAM" required>
-        <mat-option *ngFor="let user of users" [value]="user.username">
-          {{ user.username }}
-        </mat-option>
-      </mat-select>
+      <input matInput placeholder = "KAM" [(ngModel)]="data.kam" name = "kam" required/>
     </mat-form-field>
-  </div>
+    </div>
 
-  <div class="form">
-    <mat-form-field>
-      <mat-select [(ngModel)]="data.merchandiser" placeholder="Merchandiser" name="Merchandiser" required>
-        <mat-option *ngFor="let user of users" [value]="user.username">
-          {{ user.username }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="form">
-    <mat-form-field>
-      <mat-select [(ngModel)]="data.director" placeholder="Director" name="Director" required>
-        <mat-option *ngFor="let user of users" [value]="user.username">
-          {{ user.username }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="form">
-    <mat-form-field>
-      <mat-select [(ngModel)]="data.commercialist" placeholder="Commercialist" name="Commercialist" required>
-        <mat-option *ngFor="let user of users" [value]="user.username">
-          {{ user.username }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="form">
-    <mat-form-field>
-      <mat-select [(ngModel)]="data.supervisor" placeholder="Supervisor" name="Supervisor" required>
-        <mat-option *ngFor="let user of users" [value]="user.username">
-          {{ user.username }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
+    <div class="form">
+      <mat-form-field>
+        <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" required/>
+      </mat-form-field>
+      </div>
+      <div class="form">
+        <mat-form-field>
+          <input matInput placeholder = "director" [(ngModel)]="data.director" name = "director" required/>
+        </mat-form-field>
+        </div>
+        <div class="form">
+          <mat-form-field>
+            <input matInput placeholder = "Commercialist" [(ngModel)]="data.commercialist" name = "commercialist" required/>
+          </mat-form-field>
+          </div>
+          <div class="form">
+            <mat-form-field>
+              <input matInput placeholder = "Supervisor" [(ngModel)]="data.supervisor" name = "supervisor" required/>
+            </mat-form-field>
+            </div>
 
   <div class="form">
     <mat-form-field>
