--- a/src/app/dialogs/email-dialog/email-dialog.component.html
+++ b/src/app/dialogs/email-dialog/email-dialog.component.html
@@ -28,7 +28,7 @@
           style="display: flex; justify-content: center; align-items: center; background: white;">
          <mat-progress-spinner
          class="mat-spinner-color"
-           mode="indeterminate">
+           mode="indeterminate" [diameter]="30">
          </mat-progress-spinner>
         </div>
 
