--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -38,7 +38,7 @@ a {
     border: 2px solid #39ace7;
     cursor: pointer;
     margin: auto;
-
+    font-weight: bolder;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
     
 
