--- a/src/app/dialogs/object-create-dialog/object-create-dialog.component.css
+++ b/src/app/dialogs/object-create-dialog/object-create-dialog.component.css
@@ -1,3 +1,20 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  max-width: 100%;
+}
+
+.form {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.mat-form-field {
+  font-size: 16px;
+  flex-grow: 1;
+}
+
 .item2{
   background-color: white;
   color: #39ace7;
