--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="menu-btn">
-          <button matSuffix mat-button (click)="loadData(false)">Search <mat-icon>search</mat-icon></button>
+          <button matSuffix mat-button class="item3" (click)="loadData(false)">Search <mat-icon>search</mat-icon></button>
         </div>
 
 
