--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
                 aria-describedby="lastNameHelp" placeholder="Enter your password">
 
         
-            <button class="fadeIn fourth" (click)="LoginUser()" [disabled]="isLoading">Log in</button>
+            <button class="fadeIn fourth" (click)="LoginUser()" [disabled]="isLoading || !user.username || !user.password">Log in</button>
        
             <div *ngIf="isLoading"
                 style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
