--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -2,6 +2,9 @@
     overflow-x: hidden;
 }
 
+h1{
+    margin-left: 10%;
+}
 .header {
     background-color: #56baed;
     color: #fff;
@@ -21,10 +24,10 @@ button {
 
 .header .head {
     display: flex;
-    width: 400px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
-    max-width: 80%;
+    max-width: 100%;
 }
 
 .header em {
@@ -35,17 +38,134 @@ button {
     margin: 0 0 0 auto;
 }
 
+
+.object-info-data {
+  max-width: 100%;
+  overflow-wrap: break-word;
+  margin-right: 5%;
+  padding-right: 5%;
+
+}
+
+.header .obj-info {
+    width: 100%;
+    text-align: left;
+    margin: 0 auto;
+    max-width: 100%;
+    /* padding: 0 5px; */
+    margin-left: 10%;
+    margin-top: 1%;
+}
+
+.object-info-slider {
+  display: flex;
+  flex-direction: row;
+text-align: center;
+align-items: center;
+width: 95%;
+}
+
+.card1  {
+    /*float: left;*/
+    max-width: 50%;
+    border: 0;
+    flex-basis: 50%;
+    margin-bottom: 0%;
+    margin-left: 15%;
+  }
+  .card {
+      /*float: left;*/
+      max-width: 12%;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border: 0;
+      flex-basis: 10%;
+      flex-grow: 0;
+      flex-shrink: 0;
+      text-align: center;
+    }
+    .card2 {
+      /*float: left;*/
+      max-width: 15%;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border: 0;
+      flex-basis: 10%;
+      flex-grow: 0;
+      flex-shrink: 0;
+    }
+
+@media (max-width: 800px) {
+h1 {
+    margin-left: 0%;
+}
+.card1  {
+  /*float: left;*/
+  max-width: 90%;
+  padding: .5rem;
+  margin-bottom: 1rem;
+  border: 0;
+  flex-basis: 90%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-left: 10%;
+}
+.card {
+    /*float: left;*/
+    max-width: 30%;
+    padding: .5rem;
+    margin-bottom: 1rem;
+    border: 0;
+    flex-basis: 33.333%;
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+  .card2 {
+    /*float: left;*/
+    max-width: 50%;
+    padding: .75rem;
+    margin-bottom: 1rem;
+    border: 0;
+    flex-basis: 50%;
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+
+
 .object-info-data {
     max-width: 100%;
-}
+    overflow-wrap: break-word;
+    inline-size: min-content;
+    margin-right: 5%;
+    padding-right: 5%;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: auto;
+  }
+  
+  .object-info-slider {
+   align-items: stretch;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    
+  }
 
 .header .obj-info {
     width: 400px;
     text-align: left;
     margin: 0 auto;
-    max-width: 90%;
+    max-width: 100%;
     /* padding: 0 5px; */
+    margin-left: 5%;
+    margin-top: 2%;
 }
+}
+
+
+
 
 .header .obj-info ul {
     list-style-type: none;
@@ -75,7 +195,7 @@ td {
 
 .info-table {
     border-collapse: collapse;
-    width: 400px;
+    width: 100%;
     max-width: 100%;
     margin: 20px auto;
     text-align: center;
