--- a/src/app/dialogs/retailerdialog/retailerdialog.component.css
+++ b/src/app/dialogs/retailerdialog/retailerdialog.component.css
@@ -35,3 +35,10 @@ button[disabled]:hover {
 h3{
   color: #39ace7;
 }
+
+button {
+  outline: none;
+}
+::ng-deep .mat-button-focus-overlay {
+  display: none;
+}
