--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -107,7 +107,7 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
-    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)">
+    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length" (page)="loadDataOnPageEvent($event)">
     </mat-paginator>
 
     <div *ngIf="isLoading"
