--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -24,19 +24,9 @@
 .item2{
   background-color: white;
   color: #39ace7;
-  width: 140px;
-  height: 50px;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 10px;
-  font-size: 15px;
+  margin-bottom: 4%;
   border: 2px solid #39ace7;
-  cursor: pointer;
-  margin: 0 auto;
-  position: relative;
-  bottom: 0;
-  margin-bottom: 1%;
-  margin-top: 1%;
+  margin-left: 10px;
 }
 
 button:hover {
