sitne izmene (logo, boja)

--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -115,6 +115,6 @@
       </mat-progress-spinner>
     </div>
 
-    <mat-toolbar color="primary" *ngIf="noData">No objects.</mat-toolbar>
+    <mat-toolbar color="#56baed" *ngIf="noData">No objects.</mat-toolbar>
 
   </div>
