--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -2,7 +2,7 @@
 
   <div class="wrapp fadeIn first">
 
-
+    <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="100" height="100" style="float:left">
 
     <div class="header ">
       <div class="l">
@@ -22,7 +22,7 @@
            Log out
 
         </div>
-        
+
       </div>
 
     </div>
