--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -36,13 +36,9 @@
       <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
     </form>
     <div *ngIf="imageUploaded">
-      <p>Image is uploaded</p>
+      <p>Photo is uploaded.</p>
     </div>
     <div mat-dialog-actions class="wrap">
-      <button mat-button class="test" type="submit" [disabled]="isLoading" (click)="submitForm()"
-        [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a
-            onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Add</a></span></button>
-
             <div *ngIf="isLoading"
             style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
             <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
@@ -50,6 +46,9 @@
           </div>
 
       <button mat-button class="test" (click)="close()">Close</button>
+      <button mat-button class="test" type="submit" [disabled]="isLoading" (click)="submitForm()"
+        [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a
+            onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Add</a></span></button>
     </div>
   </form>
 </div>
