--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -11,7 +11,7 @@
 
   </div> -->
     <div class="detail-search">
-      <h4>Detail search</h4>
+
       <!-- <div class="detail-search-menu" *ngIf="detailSearch"> -->
       <div class="detail-search-menu">
         <div class="menu-item">
@@ -46,7 +46,7 @@
 
         <div class="menu-item">
           <mat-form-field>
-            <input type="text" matInput placeholder="Baner" [(ngModel)]="format">
+            <input type="text" matInput placeholder="Banner" [(ngModel)]="format">
           </mat-form-field>
         </div>
 
