--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="menu-btn">
-          <button matSuffix mat-button class="item3" (click)="loadData(false)">Search <mat-icon>search</mat-icon></button>
-        </div>
+          <button matSuffix mat-button class="item2" (click)="loadData(false)">Search <mat-icon>search</mat-icon></button>
+        </div> <!--bila klasa item3-->
 
 
       </div>
