--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -60,3 +60,12 @@ button {
 ::ng-deep .mat-button-focus-overlay {
   display: none;
 }
+
+
+.rotate {
+  -webkit-transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
