--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -172,3 +172,22 @@ table{
     margin-left: 5px;
   }
 } */
+
+.item2{
+  background-color: white;
+  color: #39ace7;
+  width: 150px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 15px;
+  border: 2px solid #39ace7;
+  cursor: pointer;
+  margin: 0 auto;
+  position: relative;
+  margin-bottom: 5%;
+  margin-top: 5%;
+  right: 0%;
+
+}
