--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -34,13 +34,14 @@ a {
     line-height: 100px;
     text-align: center;
     border-radius: 10px;
+    font-family:sans-serif;
     font-size: 20px;
+    font-weight:bold;
     border: 2px solid #39ace7;
     cursor: pointer;
     margin: auto;
-    font-weight: bolder;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.3);
-    
+
 
 }
 
@@ -53,6 +54,7 @@ a {
     text-align: center;
     border-radius: 10px;
     font-size: 20px;
+    font-family:sans-serif;
     border: 2px solid #39ace7;
     cursor: pointer;
     position: relative;
@@ -84,7 +86,7 @@ a {
 
   /* Simple CSS3 Fade-in-down Animation */
   .fadeInDown {
-    font-family:sans-serif;
+
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
@@ -143,6 +145,7 @@ a {
     -webkit-animation-delay: 0.4s;
     -moz-animation-delay: 0.4s;
     animation-delay: 0.4s;
+
   }
 
   .fadeIn.second {
@@ -157,3 +160,9 @@ a {
     animation-delay: 0.8s;
   }
 
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
