--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -1,3 +1,4 @@
+<div class="center"><img src="assets\StoreCheckIcon3.png" alt="SC icon" width="100" height="100" class="center"></div>
 <div class="menu fadeInDown">
     <div class="item start-sc fadeIn first" [routerLink]="['/chooseObject/addStoreCheck']">
         STORE CHECK
