--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -5,8 +5,8 @@
 
     <div class="form fb-img">
 
-      <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.img}}" alt="SC photo" width="250"
-        height="250" />
+      <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.img}}" class="rotate" style="image-orientation:from-image;" alt="SC photo" width="250"
+        height="250"/>
 
     </div>
 
