--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -5,7 +5,7 @@
             <h1>{{ objectName }}</h1>
             <!-- <em class="fa-solid fa-file-pdf fa-3x" (click)="getRetailerPlanogram()"></em> -->
             <!-- <em class="fa-solid fa-file-lines fa-3x" (click)="getRetailerPlanogram()"></em> -->
-        <em class="fa-solid fa-file-powerpoint fa-3x" style="margin-right: 10%;" (click)="getRetailerPlanogram()"></em>
+        <em class="fa-solid fa-file-powerpoint fa-3x" style="margin-right: 10%;" (click)="openPlanogramDialog()"></em>
         </div>
         <div class="object-info-data" *ngIf="showDetails">
             <div class="object-info-slider">
