--- a/src/app/dialogs/retailerdialog/retailerdialog.component.html
+++ b/src/app/dialogs/retailerdialog/retailerdialog.component.html
@@ -12,7 +12,7 @@
 
 
     <form [formGroup]="tableForm" (ngSubmit)="submit()" *ngIf="flag ==2">
-      <input  #fileInput mat-input type="file" (change)="uploadFile($event, fileInput.files)" accept=".pdf" fromControlName="file" multiple/>
+      <input  #fileInput mat-input type="file" (change)="uploadFile($event)" accept=".pdf" fromControlName="file" multiple/>
     </form>
 
     <div mat-dialog-actions>
