--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -50,7 +50,7 @@ h4 {
   width: 150px;
   max-height: 150%;
   max-width: 100%;
-  background-color: #56baed;
+  background-color: white;
   border-radius: 3px;
   color: #fff;
   margin: 0 auto;
