--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -2,7 +2,7 @@
 
   <h3 mat-dialog-title *ngIf="flag == 2">Update object: {{data.objectName}}</h3>
   <h3 mat-dialog-title *ngIf="flag == 3">Delete object: {{data.objectName}}</h3>
-  <h3 mat-dialog-title *ngIf="flag == 4">{{data.objectName}} - object details:</h3>
+  <h3 mat-dialog-title *ngIf="flag == 4">{{data.objectName}} - details:</h3>
   <form class="mat-dialog-content" #formControl="ngForm">
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
@@ -30,12 +30,12 @@
   <mat-form-field>
     <input matInput placeholder = "ObjectFormat" [(ngModel)]="data.objectFormat" name = "objectFormat" [disabled]="flag==4" required/>
   </mat-form-field>
-  <div class="form" *ngIf="flag!=4 && flag!=3">
+  <div class="form" *ngIf=" flag!=3">
     <mat-form-field>
       <input matInput placeholder = "ObjectName" [(ngModel)]="data.objectName" name = "objectName" [disabled]="true" required/>
     </mat-form-field>
   </div>
-  <div class="form" *ngIf="flag!=4 && flag!=3">
+  <div class="form" *ngIf=" flag!=3">
     <mat-form-field>
       <input matInput placeholder = "City" [(ngModel)]="data.city" name = "city" [disabled]="flag==4" required/>
     </mat-form-field>
@@ -46,29 +46,29 @@
     </mat-form-field>
   </div>
 
-  <div class="form"*ngIf="flag!=4 && flag!=3">
+  <div class="form"*ngIf=" flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "KAM" [(ngModel)]="data.kam" name = "kam" required/>
+      <input matInput placeholder = "KAM" [(ngModel)]="data.kam" name = "kam" [disabled]="flag==4" required/>
     </mat-form-field>
     </div>
-    <div class="form"*ngIf="flag!=4 && flag!=3">
+    <div class="form"*ngIf="flag!=3">
       <mat-form-field>
-        <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" required/>
+        <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" [disabled]="flag==4" required/>
       </mat-form-field>
       </div>
-      <div class="form"*ngIf="flag!=4 && flag!=3">
+      <div class="form"*ngIf=" flag!=3">
         <mat-form-field>
-          <input matInput placeholder = "Director" [(ngModel)]="data.director" name = "director" required/>
+          <input matInput placeholder = "Director" [(ngModel)]="data.director" name = "director" [disabled]="flag==4" required/>
         </mat-form-field>
         </div>
-        <div class="form"*ngIf="flag!=4 && flag!=3">
+        <div class="form"*ngIf=" flag!=3">
           <mat-form-field>
-            <input matInput placeholder = "Commercialist" [(ngModel)]="data.commercialist" name = "commercialist" required/>
+            <input matInput placeholder = "Commercialist" [(ngModel)]="data.commercialist" name = "commercialist" [disabled]="flag==4" required/>
           </mat-form-field>
           </div>
-          <div class="form"*ngIf="flag!=4 && flag!=3">
+          <div class="form"*ngIf=" flag!=3">
             <mat-form-field>
-              <input matInput placeholder = "Supervisor" [(ngModel)]="data.supervisor" name = "supervisor" required/>
+              <input matInput placeholder = "Supervisor" [(ngModel)]="data.supervisor" name = "supervisor" [disabled]="flag==4" required/>
             </mat-form-field>
             </div>
 
@@ -85,61 +85,61 @@
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf=" flag!=3">
   <mat-form-field>
     <input matInput placeholder = "CompanyShelfSpaceM" [(ngModel)]="data.objectInfo.companyShelfSpaceM" name = "companyShelfSpaceM" [disabled]="flag==4" />
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf="flag!=3">
   <mat-form-field>
     <input matInput placeholder = "CompanyShelfSpacePercent" [(ngModel)]="data.objectInfo.companyShelfSpacePercent" name = "companyShelfSpacePercent" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf=" flag!=3">
   <mat-form-field>
     <input matInput placeholder = "Gainings12Mrsd" [(ngModel)]="data.objectInfo.gainings12Mrsd" name = "gainings12Mrsd" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf=" flag!=3">
   <mat-form-field>
     <input matInput placeholder = "GainingsVs12Mpercent" [(ngModel)]="data.objectInfo.gainingsVs12mpercent" name = "gainingsVs12mpercent" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf=" flag!=3">
   <mat-form-field>
     <input matInput placeholder = "RegistersNumber" [(ngModel)]="data.objectInfo.registersNumber" name = "registersNumber" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf=" flag!=3">
   <mat-form-field>
     <input matInput placeholder = "ShelfSpaceM" [(ngModel)]="data.objectInfo.shelfSpaceM" name = "shelfSpaceM" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf="flag!=3">
   <mat-form-field>
     <input matInput placeholder = "WDpercentCustomer" [(ngModel)]="data.objectInfo.wdpercentCustomer" name = "wdpercentCustomer" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf="flag!=3">
   <mat-form-field>
     <input matInput placeholder = "WDpercentSector" [(ngModel)]="data.objectInfo.wdpercentSector" name = "wdpercentSector" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf="flag!=3">
   <mat-form-field>
     <input matInput placeholder = "WDpercentSerbia" [(ngModel)]="data.objectInfo.wdpercentSerbia" name = "wdpercentSerbia" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form" *ngIf="flag!=3">
   <mat-form-field>
     <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule" [disabled]=" flag==4"/>
   </mat-form-field>
