--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -36,6 +36,10 @@
     <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
     </mat-progress-spinner>
   </div>
+
+  <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length" (page)="loadDataOnPageEvent($event)">
+  </mat-paginator>
+  
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks.</mat-toolbar>
   <button class="item2" mat-button [routerLink]="['/resolvedFeebacks/', objectName]">Show Resolved</button>
 </div>
