--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -71,5 +71,5 @@
   </div>
 
   </div>
-  <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No users.</mat-toolbar>
+  <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No users</mat-toolbar>
 </div>
