--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -36,5 +36,5 @@
    mode="indeterminate">
  </mat-progress-spinner>
 </div>
-<mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No positions.</mat-toolbar>
+<mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No positions</mat-toolbar>
 </div>
